# project

./: README.md  best_model.h5  download_come15k.ipynb  process_data.ipynb  pyproject.toml  run.ps1  saliency_center_detection.ipynb  train_saliency_cnn.ipynb
data/: weighted_centers.json
data/models/: saliency_cnn_model.h5
saliency_cnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
