[project]
name = "saliency-cnn"
version = "0.1.0"
description = "Notebook + scripts for saliency center detection and CNN training"
authors = [{ name = "Project Team" }]
readme = "README.md"
requires-python = ">=3.10"

# Core runtime dependencies
# uv reads these from pyproject and creates/updates venv via `uv sync`
# Pin major versions conservatively; allow patch/minor updates for stability
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "pillow>=10.0",
  "opencv-python>=4.8",
  # TensorFlow for the training notebook
  "tensorflow>=2.13",
  # Jupyter & kernels for notebooks
  "jupyter>=1.0",
  "ipykernel>=6.29"
]

[project.optional-dependencies]
# Extras users can opt into via `uv add --extra dev` or `uv sync --extra dev`
dev = [
  "black>=24.10",
  "ruff>=0.6",
  "pytest>=8.0"
]

[tool.uv]
# Enable uv to use this file for resolution and venv management.
# If you want a specific index or mirror, you can add it here later.

[tool.uv.sources]
# Example: point torch/torchvision to official index if needed.
# (Left empty to use PyPI defaults.)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
